--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -1,5 +1,7 @@
 {% extends "layout/base.html" %}
 
+{% block page_title %}Conventions - APiLos{% endblock%}
+
 {% load static %}
 
 {% block page_title %}APiLos, la plateforme de conventionement des logements sociaux{% endblock%}
