--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -1,5 +1,7 @@
 {% extends "layout/base.html" %}
 
+{% block page_title %}Bailleur - APiLos{% endblock%}
+
 {% block content %}
     <div class="fr-container-fluid ds_banner">
         <div class="fr-container">
@@ -7,9 +9,12 @@
                 {% csrf_token %}
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-12 fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
-                        <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Identité du signataire</h2>
                         {% include "common/convention_edit_info.html" with convention=convention %}
+                        <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Identité du signataire</h2>
                         {% include "common/mandatory_fields_info.html" %}
+
+                        <h4>Entreprise bailleur</h4>
+
                         {% include "common/form/input_text.html" with form_input=form.nom label="Nom du bailleur" %}
                         <div class="fr-mb-2w">
                             <div class="fr-grid-row fr-grid-row--gutters">
@@ -34,6 +39,8 @@
                                 </div>
                             </div>
                         </div>
+
+                        <h4>Signataire de la convention</h4>
 
                         {% include "common/form/input_text.html" with form_input=form.dg_nom label="Nom du signataire de la convention" %}
 
