--- a/templates/conventions/comments.html
+++ b/templates/conventions/comments.html
@@ -1,5 +1,7 @@
 {% extends "layout/base.html" %}
 
+{% block page_title %}Commentaires - APiLos{% endblock%}
+
 {% load static %}
 
 {% block javascript_extras %}
@@ -21,8 +23,8 @@
 
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
-                        <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Ajouter des informations à l'attention du service instructeur</h2>
                         {% include "common/convention_edit_info.html" with convention=convention %}
+                        <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Informations complémentaires</h2>
                         {% include "common/mandatory_fields_info.html" %}
 
                         {% include "common/form/input_upload.html" with label="Ajoutez vos commentaires à l'attention de l'instructeur" form_input=form.comments form_input_files=form.comments_files object_name='convention' object_uuid=convention.uuid file_list=convention.comments_files.values textarea=True verticalDisplay=True %}
