--- a/templates/conventions/prets.html
+++ b/templates/conventions/prets.html
@@ -1,5 +1,7 @@
 {% extends "layout/base.html" %}
 
+{% block page_title %}Prêts et Financements - APiLos{% endblock%}
+
 {% block content %}
     <div class="fr-container-fluid ds_banner fr-pb-1w">
         <div class="fr-container">
@@ -7,9 +9,11 @@
                 {% csrf_token %}
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
-                        <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Financements</h2>
                         {% include "common/convention_edit_info.html" with convention=convention %}
+                        <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Financements</h2>
                         {% include "common/mandatory_fields_info.html" %}
+
+                        <h4>Prêts associés à la convention</h4>
 
                         {% if editable %}
                             {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='prets' upform=upform  what='prêts' %}
@@ -31,8 +35,6 @@
                         {{ formset.management_form }}
                         <div class="fr-table fr-table--bordered">
                             <table>
-                                <caption>Liste des prêts associés à la convention</caption>
-
                                 <thead>
                                     <tr>
                                         <th scope="col">Numéro</th>
@@ -89,7 +91,7 @@
 
                         <hr class="fr-col-12 fr-my-3w">
 
-                        <h4>Vous pouvez aussi préciser</h4>
+                        <h4>Préciser aussi</h4>
 
                         <div class="fr-mb-2w">
                             <div class="fr-grid-row fr-grid-row--gutters">
