--- a/templates/conventions/saved.html
+++ b/templates/conventions/saved.html
@@ -1,5 +1,7 @@
 {% extends "layout/base.html" %}
 
+{% block page_title %}Sauvegarde - APiLos{% endblock%}
+
 {% block content %}
     <div class="fr-container-fluid ds_banner">
         <div class="fr-container">
