--- a/templates/common/button/login.html
+++ b/templates/common/button/login.html
@@ -1,3 +1,9 @@
-<button class="fr-btn fr-fi-edit-line fr-btn--icon-left" onclick="location.href='{% url 'login' %}?next={{ request.path }}'">
+<button class="fr-btn fr-fi-edit-line fr-btn--icon-left" id='login_button'>
     Créer une convention APL
 </button>
+<script nonce="{{request.csp_nonce}}">
+    document.addEventListener('DOMContentLoaded', function () {
+        document.getElementById('login_button')
+            .addEventListener('click', function(){ location.href='{% url 'login' %}?next={{ request.path }}' });
+    });
+</script>
