--- a/templates/common/form/input_number.html
+++ b/templates/common/form/input_number.html
@@ -12,14 +12,21 @@
         pattern="[0-9]*"
         min=0
         step="{% if step %}{{step}}{% else %}1{% endif %}"
-        {% if onchange %}onchange="{{onchange}}"{% endif %}
         inputmode="numeric"
         {% if form_input.errors %}aria-describedby="text-input-error-desc-error"{% endif %}
         type="number"
         id="{{form_input.id_for_label}}"
         name="{{form_input.html_name}}"
-        {% if form_input.value %}value="{{ form_input.value|unlocalize }}"{% endif %}
+        {% if form_input.value is not None %}value="{{ form_input.value|unlocalize }}"{% endif %}
         {% if not editable %}disabled{% endif %}>
+
+    <script nonce="{{request.csp_nonce}}">
+        document.addEventListener('DOMContentLoaded', function () {
+            document.getElementById('{{form_input.id_for_label}}')
+                .addEventListener('click', function(){ {{onchange}} });
+        });
+    </script>
+
     {% for error in form_input.errors %}
         <p id="text-input-error-desc-error" class="fr-error-text">
             {{ error }}
