--- a/templates/common/form/input_upload.html
+++ b/templates/common/form/input_upload.html
@@ -8,7 +8,9 @@
         {% endif %}
         <label class="fr-label fr-mt-1w fr-mb-2w fr-h4" for="{{form_input.id_for_label}}">
             {{ label }}
-            {% include "common/mandatory_field.html" with form_input=form_input %}
+            {% if mandatory %}
+                &nbsp;{% include "common/mandatory_field_star.html" %}
+            {% endif %}
             {% include "common/help_field.html" with form_input=form_input %}
         </label>
 
@@ -35,9 +37,17 @@
                 {% if textarea %}
                     <i class="fr-text--sm">et/ou </i>
                 {% endif %}
-                <button type="button" class="fr-btn fr-mb-1w" onclick="document.getElementById('{{form_input_files.id_for_label}}_dropzone').click()">
+                <button type="button" class="fr-btn fr-mb-1w" id="{{form_input_files.id_for_label}}_dz_button">
                     <img class="apilos-fi-btn fr-mr-1w" src="{% static "icons/upload.svg" %}" ></img>Téléverser une image
                 </button>
+
+                <script nonce="{{request.csp_nonce}}">
+                    document.addEventListener('DOMContentLoaded', function () {
+                        document.getElementById('{{form_input_files.id_for_label}}_dz_button')
+                            .addEventListener('click', function(){ document.getElementById('{{form_input_files.id_for_label}}_dropzone').click() });
+                    });
+                </script>
+
                 {% include "common/help_field.html" with form_input=form_input_files %}
             </div>
             <div
