--- a/templates/common/help_field.html
+++ b/templates/common/help_field.html
@@ -1,6 +1,12 @@
 {% if form_input.help_text %}
-    &nbsp;<button class="fr-link fr-link--sm fr-fi-information-line content__helpicon" type='button' onclick="toggle('{{form_input.id_for_label}}_description')"></button>
+    &nbsp;<button class="fr-link fr-link--sm fr-fi-information-line content__helpicon" type='button' id="{{form_input.id_for_label}}_desc_button"></button>
     <div id="{{form_input.id_for_label}}_description" hidden>
         <span class="fr-hint-text">{{form_input.help_text}}</span>
     </div>
+    <script nonce="{{request.csp_nonce}}">
+        document.addEventListener('DOMContentLoaded', function () {
+            document.getElementById("{{form_input.id_for_label}}_desc_button")
+                .addEventListener('click', function(){ toggle('{{form_input.id_for_label}}_description') });
+        });
+    </script>
 {% endif %}
