--- a/templates/conventions/selection.html
+++ b/templates/conventions/selection.html
@@ -22,12 +22,17 @@
                                             id="selection"
                                             value="selection"
                                             name="{{form.existing_programme.html_name}}"
-                                            {% if form.existing_programme.value == 'selection' %}checked{% endif %}
-                                            onclick="convention_mode(true)"/>
+                                            {% if form.existing_programme.value == 'selection' %}checked{% endif %}/>
                                         <label class="fr-label" for="selection">
                                             Séléctionnez votre programme et son financement {% include "common/mandatory_field.html" with form_input=form.lot_uuid %}
                                         </label>
                                     </div>
+                                    <script nonce="{{request.csp_nonce}}">
+                                        document.addEventListener('DOMContentLoaded', function () {
+                                            document.getElementById('selection')
+                                                .addEventListener('click', function(){ convention_mode(true) });
+                                        });
+                                    </script>
 
                                     <div id='programme_selection' class="fr-ml-4w fr-select-group{% if form.lot_uuid.errors %} fr-select-group--error{% endif %}"  {% if form.existing_programme.value != 'selection' %}hidden{% endif %}>
                                         <select class="fr-select {% if form.lot_uuid.errors %}fr-select--error{% endif %}" id="lot_uuid" name="lot_uuid" {% if not editable %}disabled{% endif %}>
@@ -55,11 +60,16 @@
                                                 id="creation"
                                                 value="creation"
                                                 name="{{form.existing_programme.html_name}}"
-                                                {% if form.existing_programme.value == 'creation' %}checked{% endif %}
-                                                onclick="convention_mode(false)"/>
+                                                {% if form.existing_programme.value == 'creation' %}checked{% endif %}/>
                                             <label class="fr-label" for="creation">Convention sans agrément : créez votre convention à partir de zéro
                                             </label>
                                         </div>
+                                        <script nonce="{{request.csp_nonce}}">
+                                            document.addEventListener('DOMContentLoaded', function () {
+                                                document.getElementById('creation')
+                                                    .addEventListener('click', function(){ convention_mode(false) });
+                                            });
+                                        </script>
                                         <div id='programme_creation' {% if form.existing_programme.value != 'creation' %}hidden{% endif %}>
                                             {% if bailleurs.length == 1 %}
                                                 {% include "common/form/select_enum.html" with form_input=form.bailleur label="Bailleur" enum=bailleurs without_empty_option=True %}
