--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -23,9 +23,11 @@
                         </div>
                         <div class="fr-header__navbar">
                             {% if user.is_authenticated %}
-                                <button class="fr-btn fr-fi-close-circle-line" onclick="location.href='{% url 'logout' %}'"></button>
+                                <button class="fr-btn fr-fi-close-circle-line" id='logout'></button>
+                                {% include "common/utils/onclick_redirect.html" with id='logout' url_target='logout' %}
                             {% else %}
-                                <button class="fr-btn fr-fi-edit-line" onclick="location.href='{% url 'login' %}'"></button>
+                                <button class="fr-btn fr-fi-edit-line" id='login'></button>
+                                {% include "common/utils/onclick_redirect.html" with id='login' url_target='login' %}
                             {% endif %}
                         </div>
                     </div>
@@ -46,9 +48,10 @@
                                         <strong>{{ user }}</strong>
                                     </li>
                                     <li>
-                                        <button class="fr-btn fr-btn--secondary" onclick="location.href='{% url 'logout' %}'">
+                                        <button class="fr-btn fr-btn--secondary" id='deconnexion'>
                                             <span class="fr-fi-close-circle-line fr-mr-1w" aria-hidden="true"></span>Déconnexion
                                         </button>
+                                        {% include "common/utils/onclick_redirect.html" with id='deconnexion' url_target='logout' %}
                                     </li>
                                     <li>
                                         <a class="fr-link" href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
@@ -62,10 +65,11 @@
                                         {% include "common/button/login.html" %}
                                     </li>
                                     <li>
-                                        <button class="fr-btn fr-btn--secondary" onclick="location.href='{% url 'login' %}?instructeur=1'">
+                                        <button class="fr-btn fr-btn--secondary" id='espace_instructeur'>
                                             <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
                                             </span>Espace instructeur
                                         </button>
+                                        {% include "common/utils/onclick_redirect.html" with id='espace_instructeur' url_target='login' url_params='?instructeur=1'%}
                                     </li>
                                     <li>
                                         <a class="fr-link" href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
